# vector-cogs

./: .gitignore  .replit  README.md  bot.py  pyproject.toml
cogs/vector/: vector.py
